  joysticks. Previously if a user had a joystick connected, keyboard
  joysticks were ignored.
* src/sdl/video.c, src/sdl/video_gl.c: Rework the resolution of the segfault
  when switching between software<->OpenGL in Windows - now it always
  reinitialises the video subsystem. The previous solution would later cause
  glitches when rapidly resizing the OpenGL window.

2011-04-18  Tomasz Krasuski <kr0tki@poczta.onet.pl>
* src/ui_basic.c: Fix divsion by 0 in the slider control.
* src/configure.ac: Fix recently-introduced issue with building SDL/Windows -
  adding SDL flags to CFLAGS must be done after all AC_CHECK_FUNCS tests but
  before the OpenGL check.
* src/sdl/main.c: Fix Windows/SDL crash when the console window is closed by
  user, by servicing console-sourced signals. The crash was due to the audio
  subsystem not being closed properly.
* src/atari.c, src/sdl.main.c, src/sdl/video.[ch], src/sdl/video_gl.c, src/sdl/video_sw.[ch]:
  On Windows use the DirectX backend only in fullscreen (supports VSync) and
  Windib otherwise (DirectX backend is glitchy in windowed modes).
* src/ui.c: Use the slider control in the "Scanlines visibility" menu option;
  improve several option names.
* src/cfg.c, src/screen.[ch]: Store the "Show speed", "Show disk activity" and
  "Show sector counter" settings in config file.

2011-04-13  Tomasz Krasuski <kr0tki@poczta.onet.pl>
* src/atari.c: Fix bug introduced at 04-09 with atari.c not compiling when
  HAVE_SIGNAL is not defined.
* DOS/INSTALL, src/configure.ac, src/aclocal.m4: Detect presence of SDL
  using the standard m4 script provided by SDL. New configure options are
  available: --disable-sdltest, --with-sdl-prefix and --with-sdl-exec-prefix.
* src/sdl/video.c, src/sdl/video_gl.c: Fix misuse of SDL - setting pointers
  to OpenGL functions must be performed after each call to SDL_SetVideoMode.
  Fix a bug with screen_texture not always being freed when needed.